...
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:scrollbars="none">

            <com.android.calculator2.CalculatorFormula
                android:id="@+id/formula"
                style="@style/DisplayTextStyle.Formula"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="none"
                android:maxLines="1"
                android:textColor="@color/display_formula_text_color" />
        </com.android.calculator2.CalculatorScrollView>

        <com.android.calculator2.CalculatorResult
            android:id="@+id/result"
            style="@style/DisplayTextStyle.Result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:bufferType="spannable"
            android:singleLine="true"
...
